tests/NormalTests/paczka1/fuzzy1/80065330.err
Error in line 5: A787 A787 66,1
Error in line 7: qVlhgNvl A366 19,7
Error in line 19: qVlhgNvl A366 84,3
Error in line 27: zdjjW A366 84,9
Error in line 32: A787 A411 16,8
Error in line 37: PVnQylcVX A787 97,1
